// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-address renders 1`] = `
<sc-address>
  <mock:shadow-root>
    <div class="sc-address" part="base">
      <sc-form-control class="sc-address__control" exportparts="label, help-text, form-control"></sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address renders CA address fields 1`] = `
<sc-address>
  <mock:shadow-root>
    <div class="sc-address" part="base">
      <sc-form-control class="sc-address__control" exportparts="label, help-text, form-control"></sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address renders EU address fields 1`] = `
<sc-address>
  <mock:shadow-root>
    <div class="sc-address" part="base">
      <sc-form-control class="sc-address__control" exportparts="label, help-text, form-control"></sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address renders US address fields 1`] = `
<sc-address>
  <mock:shadow-root>
    <div class="sc-address" part="base">
      <sc-form-control class="sc-address__control" exportparts="label, help-text, form-control"></sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address renders loading 1`] = `
<sc-address loading="true">
  <mock:shadow-root>
    <div class="sc-address" part="base">
      <sc-form-control class="sc-address__control" exportparts="label, help-text, form-control"></sc-form-control>
      <sc-block-ui exportparts="base:block-ui, content:block-ui__content"></sc-block-ui>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address shows and requires name if requireName is true 1`] = `
<sc-address require-name="" show-name="">
  <mock:shadow-root>
    <div class="sc-address" part="base">
      <sc-form-control class="sc-address__control" exportparts="label, help-text, form-control"></sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;

exports[`sc-address shows the name field if showName is true 1`] = `
<sc-address show-name="">
  <mock:shadow-root>
    <div class="sc-address" part="base">
      <sc-form-control class="sc-address__control" exportparts="label, help-text, form-control"></sc-form-control>
    </div>
  </mock:shadow-root>
</sc-address>
`;
